# python-oneliner

./: .gitignore  LICENSE  README.md  README.rst  oneliner.py  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  test.py  tests.py
doc/: conf.py  index.rst
docs/: conf.py  index.rst
tests/: test_pyl.py
