[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oneliner"
version = "0.2.2"
description = "practical python one-liners"
keywords = ["oneliner", "one-liner"]
readme = "README.rst"
license = { file = "LICENSE" }
requires-python = ">=3.6"
authors = [{ name = "Georgi Valkov", email = "georgi.t.valkov@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
"Homepage" = "https://github.com/gvalkov/python-oneliner"

[project.scripts]
"pyl" = "oneliner:main"

[tool.setuptools_scm]

[tool.ruff]
line-length = 120

[tool.bumpversion]
current_version = "0.2.2"
commit = true
tag = true
allow_dirty = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "oneliner.py"